logs/mobility/build.make.075.log.stderr
In file included from /home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:1:0:
/home/steven/rover_workspace/src/mobility/src/DropOffController.h:36:30: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
 const float FINGERS_CLOSED = 0;
                              ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.h:37:24: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
 const float WRIST_UP = 0;
                        ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.h:38:26: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
 const float WRIST_DOWN = 1.25;
                          ^
In file included from /home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:1:0:
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:37:30: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
 const float FINGERS_CLOSED = 0;
                              ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:38:24: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
 const float WRIST_UP = 0;
                        ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:39:26: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
 const float WRIST_DOWN = 1.25;
                          ^
In file included from /home/steven/rover_workspace/src/mobility/src/mobility.cpp:22:0:
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:37:30: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
 const float FINGERS_CLOSED = 0;
                              ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:38:24: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
 const float WRIST_UP = 0;
                        ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:39:26: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
 const float WRIST_DOWN = 1.25;
                          ^
In file included from /home/steven/rover_workspace/src/mobility/src/mobility.cpp:23:0:
/home/steven/rover_workspace/src/mobility/src/DropOffController.h:36:30: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
 const float FINGERS_CLOSED = 0;
                              ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.h:37:24: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
 const float WRIST_UP = 0;
                        ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.h:38:26: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
 const float WRIST_DOWN = 1.25;
                          ^
In file included from /opt/ros/indigo/include/ros/serialization.h:37:0,
                 from /opt/ros/indigo/include/ros/publisher.h:34,
                 from /opt/ros/indigo/include/ros/node_handle.h:32,
                 from /opt/ros/indigo/include/ros/ros.h:45,
                 from /home/steven/rover_workspace/src/mobility/src/mobility.cpp:1:
/opt/ros/indigo/include/ros/message_traits.h: In instantiation of ‘static const char* ros::message_traits::MD5Sum<M>::value(const M&) [with M = volatile std_msgs::Float32_<std::allocator<void> >]’:
/opt/ros/indigo/include/ros/message_traits.h:255:104:   required from ‘const char* ros::message_traits::md5sum(const M&) [with M = volatile std_msgs::Float32_<std::allocator<void> >]’
/opt/ros/indigo/include/ros/publisher.h:112:7:   required from ‘void ros::Publisher::publish(const M&) const [with M = volatile std_msgs::Float32_<std::allocator<void> >]’
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:913:59:   required from here
/opt/ros/indigo/include/ros/message_traits.h:126:34: error: ‘const volatile struct std_msgs::Float32_<std::allocator<void> >’ has no member named ‘__getMD5Sum’
     return m.__getMD5Sum().c_str();
                                  ^
/opt/ros/indigo/include/ros/message_traits.h: In instantiation of ‘static const char* ros::message_traits::DataType<M>::value(const M&) [with M = volatile std_msgs::Float32_<std::allocator<void> >]’:
/opt/ros/indigo/include/ros/message_traits.h:264:106:   required from ‘const char* ros::message_traits::datatype(const M&) [with M = volatile std_msgs::Float32_<std::allocator<void> >]’
/opt/ros/indigo/include/ros/publisher.h:112:7:   required from ‘void ros::Publisher::publish(const M&) const [with M = volatile std_msgs::Float32_<std::allocator<void> >]’
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:913:59:   required from here
/opt/ros/indigo/include/ros/message_traits.h:143:36: error: ‘const volatile struct std_msgs::Float32_<std::allocator<void> >’ has no member named ‘__getDataType’
     return m.__getDataType().c_str();
                                    ^
In file included from /opt/ros/indigo/include/ros/publisher.h:34:0,
                 from /opt/ros/indigo/include/ros/node_handle.h:32,
                 from /opt/ros/indigo/include/ros/ros.h:45,
                 from /home/steven/rover_workspace/src/mobility/src/mobility.cpp:1:
/opt/ros/indigo/include/ros/serialization.h: In instantiation of ‘static uint32_t ros::serialization::Serializer<T>::serializedLength(typename boost::call_traits<T>::param_type) [with T = volatile std_msgs::Float32_<std::allocator<void> >; uint32_t = unsigned int; typename boost::call_traits<T>::param_type = const volatile std_msgs::Float32_<std::allocator<void> >&]’:
/opt/ros/indigo/include/ros/serialization.h:172:43:   required from ‘uint32_t ros::serialization::serializationLength(const T&) [with T = volatile std_msgs::Float32_<std::allocator<void> >; uint32_t = unsigned int]’
/opt/ros/indigo/include/ros/serialization.h:848:45:   required from ‘ros::SerializedMessage ros::serialization::serializeMessage(const M&) [with M = volatile std_msgs::Float32_<std::allocator<void> >]’
/opt/ros/indigo/include/ros/publisher.h:118:67:   required from ‘void ros::Publisher::publish(const M&) const [with M = volatile std_msgs::Float32_<std::allocator<void> >]’
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:913:59:   required from here
/opt/ros/indigo/include/ros/serialization.h:144:34: error: ‘const volatile struct std_msgs::Float32_<std::allocator<void> >’ has no member named ‘serializationLength’
     return t.serializationLength();
                                  ^
/opt/ros/indigo/include/ros/serialization.h: In instantiation of ‘static void ros::serialization::Serializer<T>::write(Stream&, typename boost::call_traits<T>::param_type) [with Stream = ros::serialization::OStream; T = volatile std_msgs::Float32_<std::allocator<void> >; typename boost::call_traits<T>::param_type = const volatile std_msgs::Float32_<std::allocator<void> >&]’:
/opt/ros/indigo/include/ros/serialization.h:154:33:   required from ‘void ros::serialization::serialize(Stream&, const T&) [with T = volatile std_msgs::Float32_<std::allocator<void> >; Stream = ros::serialization::OStream]’
/opt/ros/indigo/include/ros/serialization.h:855:23:   required from ‘ros::SerializedMessage ros::serialization::serializeMessage(const M&) [with M = volatile std_msgs::Float32_<std::allocator<void> >]’
/opt/ros/indigo/include/ros/publisher.h:118:67:   required from ‘void ros::Publisher::publish(const M&) const [with M = volatile std_msgs::Float32_<std::allocator<void> >]’
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:913:59:   required from here
/opt/ros/indigo/include/ros/serialization.h:127:5: error: ‘const volatile struct std_msgs::Float32_<std::allocator<void> >’ has no member named ‘serialize’
     t.serialize(stream.getData(), 0);
     ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
